# haskell-jwt

./: .gitignore  .mailmap  .tmuxp.yaml  .travis.yml  CHANGELOG.md  Makefile  README.md  bitbucket-pipelines.yml  cabal.project  changelog  doctests.hs  flake.nix  jwt.cabal  stack.yaml
.github/workflows/: haskell.yml
src/Data/ByteString/: Extended.hs
src/Data/Text/: Additions.hs  Extended.hs
src/Web/: Base64.hs  JWT.hs
src/Web/JWT/: Validate.hs
tests/: jwt.secret.1
tests/src/: TestRunner.hs
tests/src/Data/ByteString/: ExtendedTests.hs
tests/src/Data/Text/: AdditionsTests.hs  ExtendedTests.hs
tests/src/Web/: Base64Tests.hs  JWTInteropTests.hs  JWTTests.hs  JWTTestsCompat.hs
