cabal-version:      3.0

name:               jwt
version:            0.11.0
synopsis:           JSON Web Token (JWT) decoding and encoding
license:            MIT
license-file:       LICENSE
author:             Brian McKenna
maintainer:         brian@brianmckenna.org
homepage:           https://github.com/puffnfresh/haskell-jwt
bug-reports:        https://github.com/puffnfresh/haskell-jwt/issues
category:           Web
build-type:         Simple
description:
  JSON Web Token (JWT) is a compact URL-safe means of representing claims to be transferred between two parties.
  .
  To get started, see the documentation for the "Web.JWT" module.

tested-with:
  , GHC == 8.6.5
  , GHC == 8.8.4
  , GHC == 8.10.7
  , GHC == 9.0.2

extra-source-files:
  CHANGELOG.md
  README.md
  stack.yaml
  tests/jwt.secret.1

source-repository head
  type:     git
  location: https://github.com/puffnfresh/haskell-jwt.git

library
  exposed-modules:  Web.JWT
  other-modules:
    Data.ByteString.Extended
    Data.Text.Extended

  build-depends:
    , aeson                 >=0.7
    , base                  >=4.8    && <5
    , bytestring            >=0.10
    , containers            >=0.5
    , cryptonite            >=0.6
    , cryptostore           >=0.2
    , http-types            >=0.8
    , memory                >=0.8
    , network-uri
    , scientific            >=0.2
    , semigroups            >=0.15.4
    , text                  >=0.11
    , time                  >=1.1
    , unordered-containers  >=0.2
    , vector                >=0.7.1
    , x509
    , x509-store

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -fno-warn-unused-do-bind -fno-warn-orphans
    -fno-warn-name-shadowing

--Werror
test-suite testsuite
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          TestRunner.hs

  -- Make sure the tests are listed here so that they will be part of the source distribution
  other-modules:
    Data.ByteString.Extended
    Data.ByteString.ExtendedTests
    Data.Text.Extended
    Data.Text.ExtendedTests
    Web.JWT
    Web.JWTInteropTests
    Web.JWTTests
    Web.JWTTestsCompat

  hs-source-dirs:   tests/src src
  build-depends:
    , aeson
    , base                  >=4.8     && <5
    , bytestring            >=0.10
    , containers
    , cryptonite
    , cryptostore
    , http-types
    , HUnit
    , lens
    , lens-aeson
    , memory
    , network-uri
    , QuickCheck            >=2.4.0.1
    , scientific            >=0.2
    , semigroups            >=0.15.4
    , tasty                 >=0.7
    , tasty-hunit           >=0.4
    , tasty-quickcheck      >=0.3
    , tasty-th              >=0.1
    , text                  >=0.11
    , time                  >=1.1
    , unordered-containers
    , vector                >=0.7.1
    , x509
    , x509-store

  cpp-options:      -DTEST

test-suite doctests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  ghc-options:      -threaded
  build-depends:
    , base     >=4.8  && <5
    , doctest  >=0.20
    , jwt
